Revision history for Perl module Dist-Zilla-PluginBundle-Author-DOHERTY

{{$NEXT}}
    * Also make GH URL point at metacpan
    * Make signed tags
    * Include -TRIAL on trial releases

0.021     2011-08-24
    * Fix documentation for enabling/disabling TestingMania tests
    * Require newer Dist::Zilla::Plugin::GitHub, which points metadata to parent forks on GH
    * Tweet URL to metacpan

0.020     2011-07-08
    * Also ship Build.PL

0.019     2011-05-09
    * Bump MinimumPerl version to scan only perl files
    * Add Clean plugin to run clean automatically after release
    * Renamed no_twitter to twitter

0.017     2011-04-19
    * Use goo.gl for URL shortening

0.016     2011-04-17
    * Update Github plugins
    * Remove TestingMania version prerequisite
    * Remove Repository/Bugtracker (covered by Github::Meta)

0.015     2011-04-02
    * Add support for specifying the changelog filename

0.014     2011-02-18
    * Attempt to use Git::Commit and Git::Push properly
    * Use OurPkgVersion instead of PkgVersion - much better
    * Require 0.0017 for ROKR's plugins - bugfixes

0.012     2011-02-06
    * Require D::Z::PB::TestingMania 0.003 for a better dep tree & PodLinkTests
    * Add CopyMakefilePLFromBuild

0.011     2011-01-24
    * Use new name for Pod::Weaver pluginbundle

0.010     2011-01-24
    * Renamed to Dist::Zilla::PluginBundle::Author::DOHERTY
    * Added support for using SurgicalPodWeaver via surgical in dist.ini
    * Bumped minimum version of InstallRelease to hopefully detect failed installs

0.009     2011-01-23
    * Handle the case where it is a fake release
    * Use is.gd to shorten URL for Twitter

0.008     2011-01-18
    * Fixed spurious warning
    * Require support for p3rl.org in GithubUpdate

0.007     2011-01-18
    * Fixed undef plugin error when no_twitter is set
    * Allow README to be dirty when releasing (again?)

0.006     2011-01-18
    * Tweet releases
    * Update github information on release