@@ -4,6 +4,7 @@ Revision history for Perl module Dist-Zilla-PluginBundle-Author-DOHERTY
     * Also make GH URL point at metacpan
     * Make signed tags
     * Include -TRIAL on trial releases
+    * Allow specifying the git remote to push to after release
 
 0.021     2011-08-24
     * Fix documentation for enabling/disabling TestingMania tests
